# tRNAZAP

./: .gitignore  LICENSE  README.md  error.txt  pyproject.toml
configs/: zap_s54_c51_BIOecoli_fragmented.yaml  zap_s54_c51_IVTecoli_fragmented.yaml  zap_s54_c79_BIOyeast_fragmented.yaml  zap_s54_c79_IVTyeast_fragmented.yaml
example/: run_example.sh  run_example_ecoli.sh  run_example_yeast.sh
example/bwa_mem_vs_zap_comp_results/ecoli/: ecoli__aligner_comparison_count_matrix.tsv  ecoli__summary_statistics.csv  ecoli_per_position_error_delta.tsv
example/bwa_mem_vs_zap_comp_results/yeast/: yeast__aligner_comparison_count_matrix.tsv  yeast__summary_statistics.csv  yeast_per_position_error_delta.tsv
example/data/ecoli/: ecoli_aligned_bwa.bam  ecoli_aligned_zap.sorted.bam.bai  ecoli_unaligned.dorado_1.0.0.emite_moves.calmd.bam
example/data/yeast/: .nfs0bfeb1a7371d3b7e000043ca  .nfs7eef8872599c39e9000043c8  .nfsc2828c6e7913301a000043c9  .nfsf1f32034f50098e8000043c7  yeast_aligned_bwa.bam  yeast_aligned_zap.sorted.bam.bai  yeast_unaligned_dorado_1.0.0.emit_moves.calmd.bam
src/trnazap/: __init__.py  __main__.py
src/trnazap/cli/: align_cli.py  compare_conditions_cli.py  infer_multi_cli.py  label_cli.py  visualize_alignment_cli.py
src/trnazap/config/: default_configs.py  model_config.py
src/trnazap/feeders/: collate_fn.py
src/trnazap/inference/: inference_base.py  pod5_inferer.py  single_read_inferer.py
src/trnazap/io/: archive_format.py  archive_reader.py  archive_reader_old.py  archive_writer.py  archive_writer_old.py
src/trnazap/label/: human_decoder.pkl  (+2 more)
(+26 files in other folders)
